# enV5-base-project

./: .gitignore  CMakeLists.txt  helper.cmake  testscript.py
src/: CMakeLists.txt  Main.c  Main_old.c  README.md
